2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (evalResource):
        Implement cache for Tcl scripts loaded from
        jacl.jar and tcljava.jar. The init.tcl script
        is loaded when a new Interp() is created,
        and this cache makes that operation a bit
        faster. This change would make script loading
        operations a lot faster in the worst case of
        a class loader that did not cache loaded resources.

2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExecCmd.java (cmdProc):
        Reimplement JDK 1.3 and newer exec so that two
        threads are created. One reads stdout of the
        subprocess while the other reads stderr. This
        is needed to avoid deadlocking in waitFor()
        when a process writes a lot of stdout and stderr.
        * src/tests/tcljava/tests/exec/ExecLotsOutput.java:
        * tests/inprogress/ExecCmd.test: Add test case
        for the waitFor() exec deadlocking bug.

2006-03-30  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tjc/tjcthread.test: Adjust TIMEOUT
        values based on how long the first compile
        takes. This keeps the tests from timing out
        too quickly on a heavily loaded system.

2006-03-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Var.java: Create new
        Var flag TRACE_EXISTS and set it instead of
        NO_CACHE when traces are defined. Also, fix
        a bug in untraceVar() where deleting a trace
        should have nulled out the traces field.
        Mark resolver vars as NO_CACHE to match the
        C implementation. Check for this new
        TRACE_EXISTS flag in the resolveScalar and
        resolveArray methods. Remove questionable
        setting of Var.hashKey to null when nulling
        out a compiled local slot post unset.
        * src/tests/jacl/tcl/lang/TestVarFrameCmd.java: